--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,7 @@ p {
 .menu {
   width: 100%;
   display: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .main-nav a {
@@ -128,8 +129,6 @@ p {
   text-decoration: none;
   text-transform: uppercase;
   letter-spacing: 2px;
-
-
 }
 
 .main-nav a:visited {
@@ -156,6 +155,7 @@ label {
 
 #toggle {
   display: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 #toggle:checked + .menu {
