--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ html, body {
   vertical-align: baseline;
 }
 html {
-  font-family: 'Montserrat', serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 body {
